env variables added

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* .css-xal4sx{
+.css-xal4sx{
   margin-left: auto !important;
   margin-right: auto !important;
   
-} */
+}
 * {
   box-sizing: border-box;
 }
